.gitignore edited online with Bitbucket

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+# OS generated files #
+######################
+*/.DS_Store
+.DS_Store
+.DS_Store?
 
 # CocoaPods
 #
