add CLLocation na Tela de Feeds

--- a/horabella/Info.plist
+++ b/horabella/Info.plist
@@ -78,6 +78,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
