consumo do webservice com fotos e AlamofireImage add

--- a/horabella/Info.plist
+++ b/horabella/Info.plist
@@ -62,6 +62,15 @@
 				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
+            <key>lorempixel.com</key>
+            <dict>
+                <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSExceptionRequiresForwardSecrecy</key>
+                <false/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
 			<key>facebook.com</key>
 			<dict>
 				<key>NSIncludesSubdomains</key>
